--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "0.5.10",
-    "@tailwindcss/postcss": "^4.0.9",
     "@types/bcryptjs": "2.4.6",
     "@vercel/postgres": "0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
@@ -15,19 +14,21 @@
     "clsx": "2.1.1",
     "kysely": "^0.27.5",
     "next": "15.2.0",
-    "next-auth": "5.0.0-beta.25",
-    "postcss": "8.5.3",
+    "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.13.8",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14",
     "typescript": "5.8.2"
   },
   "overrides": {
